# rostack-chan

./: .gitignore  README.md
face/: .gitignore  platformio.ini
face/src/: ip_template.hpp  main.cpp
rostackchan_description/: CMakeLists.txt  package.xml
rostackchan_description/launch/: display.launch.py  rostackchan.launch.py  rostackchan.rviz
rostackchan_description/meshes/: bracket_SCS0009_marged.stl  stackchan_shell.stl
rostackchan_description/urdf/: rostackchan.ros2_control.xacro  rostackchan.urdf.xacro  rostackchan.xacro
rostackchan_example/: CMakeLists.txt  package.xml
rostackchan_example/launch/: rostackchan_random.launch.py
rostackchan_example/src/: random_face.cpp  random_move.cpp
